--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Dewdn2.github.io by dewdn2</title>
+    <title>Dustin Wehmeyer</title>
   </head>
 
   <body>
